Add fat jar for main-owner-service:persistence